# bazel-experiments

./: .bazelrc  .envrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  arm-linux-gnu.nix  arm-none-eabi.nix  common.bzl  flake.nix  kernel.bzl  llvm.bzl  requirements.txt  sources.bzl
.conan/: global.conf  remotes.json  settings.yml
.conan/profiles/: armv7e-m-gnu  default
app/: BUILD.bazel
application/: BUILD.bazel  defs.bzl  initrd-builder.sh
board/: 0001-Fix-enum-int-mismatch.patch  0001-pkcs11-Fix-function-parameter-type-mismatch.patch  0002-arm-mm-Fix-function-parameter-type-mismatch.patch  0003-arm-kernel-Explicitly-disable-execstack.patch  BUILD.bazel
conan/: BUILD.template  bzlmod_deployer.py  bzlmod_generator.py  conan.bzl
coprocessor/: BUILD.bazel
fip/: BUILD.bazel  fip.bzl
genimage/: 0001-fakeroot-Disable-manpages.patch  BUILD.bazel  genimage.bzl
image/: BUILD.bazel  gpt.bzl  initrd-builder.sh  initrd.bzl  mkgpt.sh
kbuild/: BUILD.bazel  kbuild.bzl  kbuild.sh
libc/: BUILD
linux/: BUILD.bazel  initrd-builder.sh  kbuild.sh  kernel.bzl  main.cpp
main/: BUILD  hello-world.cpp
make/: BUILD.bazel  kbuild.bzl  make.bzl  make.sh
rust/: BUILD.bazel
toolchains/: .gitignore  BUILD  BUILD.bazel  cc_toolchain_config.bzl
