load("//image:gpt.bzl", "gpt_image")
load("//image:initrd.bzl", "cpio_image")


gpt_image(
  name = "demo",
  first_stage_bootloader = "//application:bl2.elf",
  second_stage_bootloader = "//application:u-boot.bin",
  rootfs = [
    "//application:optee",
    "//application:zImage",
    ":rootfs",
  ],
)


# TODO: Put glibc components into a separate target.
cpio_image(
  name = "rootfs",
  srcs = [
    "//application:init",
    # "//coprocessor:firmware",
  ],
)
