bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "aspect_bazel_lib", version = "2.5.1")

##############################################################################
# ARM toolchain
###

bazel_dep(name = "toolchains_arm_gnu", version = "1.0.3")
arm_toolchain = use_extension("@toolchains_arm_gnu//:extensions.bzl", "arm_toolchain")

arm_toolchain.arm_none_linux_gnueabihf(version = "13.2.1")
use_repo( arm_toolchain, "arm_none_linux_gnueabihf")
register_toolchains("@arm_none_linux_gnueabihf//toolchain:all")

arm_toolchain.arm_none_eabi(version = "13.2.1")
use_repo(arm_toolchain, "arm_none_eabi")
register_toolchains("@arm_none_eabi//toolchain:all")

##############################################################################
# Conan
###

conan = use_extension("//conan:conan.bzl", "conan")

conan.config(install_from=".conan")
conan.install(requires="stm32mp1/1.6.0", profile="armv7e-m-gnu")

use_repo(conan, "conan")

##############################################################################
# Sources used in the build
###

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

_BUILD_SOURCES = """
filegroup(
  name = "sources",
  srcs = glob([\"**\"]),
  visibility = ["//visibility:public"],
)
"""

http_archive(
  name = "linux",
  build_file_content = _BUILD_SOURCES,
  url='https://github.com/STMicroelectronics/linux/archive/b3464dcb76176a9284c524219ae7444a177cf399.tar.gz',
  sha256='fff18b5d14e648e8b300daebe99f20e61021b245c8413cb7b26e10ad796e3b48',
  strip_prefix='linux-b3464dcb76176a9284c524219ae7444a177cf399',
)

http_archive(
  name = "u-boot",
  build_file_content = _BUILD_SOURCES,
  url='https://github.com/STMicroelectronics/u-boot/archive/ae5922ad8322eca72e883e2d809257d5606659fd.tar.gz',
  sha256='5df837d87c55000c0690ffabe40d2836a60b913b75732d9afe69f85cfb737ce7',
  strip_prefix='u-boot-ae5922ad8322eca72e883e2d809257d5606659fd',
)

http_archive(
  name = "optee",
  build_file_content = _BUILD_SOURCES,
  url='https://github.com/STMicroelectronics/optee_os/archive/3712e94c4728c70b7fd99af4031d51201b05a1cc.tar.gz',
  sha256='535ecb043d03639a2045a62f113d7b7ad3253162b5a2a283ebb792078d546f35',
  strip_prefix='optee_os-3712e94c4728c70b7fd99af4031d51201b05a1cc',
  patch_args = ["-p1"],
  patches = [
    "//board:0001-Fix-enum-int-mismatch.patch",
  ]
)

http_archive(
  name = "bl2",
  build_file_content = _BUILD_SOURCES,
  url='https://github.com/STMicroelectronics/arm-trusted-firmware/archive/03e5c7e8e059d7c3b1267a2d48d32845e0a40e40.tar.gz',
  sha256='95dafdc38190f8d83e6216d50dd1e28a0d3dcf05eb12a76a68780892216b30a4',
  strip_prefix='arm-trusted-firmware-03e5c7e8e059d7c3b1267a2d48d32845e0a40e40',
)

##############################################################################
# Genimage tool
###

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")

http_archive(
  name = "fakeroot",
  build_file_content = _BUILD_SOURCES,
  url='https://salsa.debian.org/clint/fakeroot/-/archive/upstream/1.36/fakeroot-upstream-1.36.tar.gz',
  sha256='5128dd5df59955d60453aea1817d2f31c29ffb8b8addcc5d7e200460278a6b0a',
  strip_prefix='fakeroot-upstream-1.36',
  patches = ["//genimage:0001-fakeroot-Disable-manpages.patch"],
  patch_args = ["-p1"],
)

http_archive(
  name = "libconfuse",
  build_file_content = _BUILD_SOURCES,
  url='https://github.com/libconfuse/libconfuse/archive/refs/tags/v3.3.tar.gz',
  sha256='cb90c06f2dbec971792af576d5b9a382fb3c4ca2b1deea55ea262b403f4e641e',
  strip_prefix='libconfuse-3.3',
)

http_archive(
  name = "genimage",
  build_file_content = _BUILD_SOURCES,
  url='https://github.com/pengutronix/genimage/archive/refs/tags/v18.tar.gz',
  sha256='af555b9d9f17301ab4cc2cda4849afd88d2b97ae4cc8badb9b8448299d6f6080',
  strip_prefix='genimage-18',
)

_GENIMAGE_TOOLCHAIN = """
exports_files(glob(["bin/**", "lib/**"]))
"""

http_archive(
  name = "rules_genimage",
  build_file_content = _GENIMAGE_TOOLCHAIN,
  url='https://static.ethantwardy.com/genimage/latest/genimage-toolchain-gcc-linux-aarch64.tar.gz',
  sha256='18ac76d136261be72b95a5e933d832449d050fa27f0f1c531226ba778980729b',
  strip_prefix='genimage',
)
