bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "aspect_bazel_lib", version = "2.5.1")

##############################################################################
# ARM toolchain
###

bazel_dep(name = "toolchains_arm_gnu", version = "1.0.3")
arm_toolchain = use_extension("@toolchains_arm_gnu//:extensions.bzl", "arm_toolchain")

arm_toolchain.arm_none_linux_gnueabihf(version = "13.2.1")
use_repo( arm_toolchain, "arm_none_linux_gnueabihf")
register_toolchains("@arm_none_linux_gnueabihf//toolchain:all")

##############################################################################
# Sources used in the build
###

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

_BUILD_SOURCES = """
filegroup(
  name = "sources",
  srcs = glob([\"**\"]),
  visibility = ["//visibility:public"],
)
"""

http_archive(
  name = "linux",
  build_file_content = _BUILD_SOURCES,
  url='https://github.com/STMicroelectronics/linux/archive/v6.1-stm32mp-r2.tar.gz',
  sha256='1f39d24016c2cb88baa3c68165d9ef985e56be43c3273760e7427418d3da354f',
  strip_prefix='linux-6.1-stm32mp-r2',
)

http_archive(
  name = "u-boot",
  build_file_content = _BUILD_SOURCES,
  url='https://github.com/STMicroelectronics/u-boot/archive/refs/tags/v2022.10-stm32mp-r2.tar.gz',
  sha256='ff26640bca2d5ef310135da4dda7761fdf5c296fdf22cfca3ac858261364582b',
  strip_prefix='u-boot-2022.10-stm32mp-r2',
)

http_archive(
  name = "optee",
  build_file_content = _BUILD_SOURCES,
  url='https://github.com/STMicroelectronics/optee_os/archive/refs/tags/3.16.0-stm32mp-r2.2.tar.gz',
  sha256='27df8ce07edb47a19de76f6f68d3795929c47ee5a08ca5c4c54fa1ec779c8f70',
  strip_prefix='optee_os-3.16.0-stm32mp-r2.2',
  patch_args = ["-p1"],
  patches = [
    "//board:0001-pkcs11-Fix-function-parameter-type-mismatch.patch",
    "//board:0002-arm-mm-Fix-function-parameter-type-mismatch.patch",
    "//board:0003-arm-kernel-Explicitly-disable-execstack.patch",
  ],
)

http_archive(
  name = "bl2",
  build_file_content = _BUILD_SOURCES,
  url='https://github.com/STMicroelectronics/arm-trusted-firmware/archive/refs/tags/v2.8-stm32mp-r2.tar.gz',
  sha256='9f50647299a083324bf6394d0c315b60a2a8a716b8ec059bbd12a81d7ab3078a',
  strip_prefix='arm-trusted-firmware-2.8-stm32mp-r2',
)

##############################################################################
# Genimage tool
###

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")

http_archive(
  name = "fakeroot",
  build_file_content = _BUILD_SOURCES,
  url='https://salsa.debian.org/clint/fakeroot/-/archive/upstream/1.36/fakeroot-upstream-1.36.tar.gz',
  sha256='5128dd5df59955d60453aea1817d2f31c29ffb8b8addcc5d7e200460278a6b0a',
  strip_prefix='fakeroot-upstream-1.36',
  patches = ["//genimage:0001-fakeroot-Disable-manpages.patch"],
  patch_args = ["-p1"],
)

http_archive(
  name = "libconfuse",
  build_file_content = _BUILD_SOURCES,
  url='https://github.com/libconfuse/libconfuse/archive/refs/tags/v3.3.tar.gz',
  sha256='cb90c06f2dbec971792af576d5b9a382fb3c4ca2b1deea55ea262b403f4e641e',
  strip_prefix='libconfuse-3.3',
)

http_archive(
  name = "genimage",
  build_file_content = _BUILD_SOURCES,
  url='https://github.com/pengutronix/genimage/archive/refs/tags/v18.tar.gz',
  sha256='af555b9d9f17301ab4cc2cda4849afd88d2b97ae4cc8badb9b8448299d6f6080',
  strip_prefix='genimage-18',
)

_GENIMAGE_TOOLCHAIN = """
exports_files(glob(["bin/**", "lib/**"]))
"""

http_archive(
  name = "rules_genimage",
  build_file_content = _GENIMAGE_TOOLCHAIN,
  url='https://static.ethantwardy.com/genimage/latest/genimage-toolchain-gcc-linux-aarch64.tar.gz',
  sha256='18ac76d136261be72b95a5e933d832449d050fa27f0f1c531226ba778980729b',
  strip_prefix='genimage',
)
