##############################################################################
# Bootchain software
###

load("//make:make.bzl", "make")

# Commands to build a working U-boot:
# make CROSS_COMPILE=arm-unknown-linux-gnueabi- ARCH=arm stm32mp15_defconfig
# make CROSS_COMPILE=arm-unknown-linux-gnueabi- ARCH=arm DEVICE_TREE=stm32mp157a-dk1 all
make(
  name = "uboot",
  srcs = ["@u-boot//:sources"],
  targets = ["stm32mp15_defconfig", "all"],
  outputs = [
    "u-boot-nodtb.bin",
    "u-boot.dtb",
  ],
  args = [
    "DEVICE_TREE=stm32mp157a-dk1",
    "ARCH=arm",
    "CROSS_COMPILE=arm-none-linux-gnueabihf-",
  ],
  target_compatible_with = [
    "@platforms//cpu:aarch32",
  ],
)

make(
  name = "optee",
  env = {
    'CROSS_COMPILE': 'arm-none-linux-gnueabihf-',
    'ARCH': 'arm',
    'PLATFORM': 'stm32mp1-157D_DK1',
    'CFG_EMBED_DTB_SOURCE_FILE': 'stm32mp157d-dk1.dts',
  },
  srcs = ["@optee//:sources"],
  builddir_variable = "O",
  outputs = [
    'core/tee-header_v2.bin',
    'core/tee-pager_v2.bin',
    'core/tee-pageable_v2.bin',
  ],
  targets = ["all"],
  target_compatible_with = [
    "@platforms//cpu:aarch32",
  ],
  visibility = ["//visibility:public"],
)

make(
  name = "trusted_firmware_a",
  # TF-A build system ignores these variables when they're set in the
  # environment.
  args = [
    'CROSS_COMPILE=arm-none-linux-gnueabihf-',
    'PLAT=stm32mp1',
    'ARCH=aarch32',
    'AARCH32_SP=optee',
    'ARM_ARCH_MAJOR=7',
    'DTB_FILE_NAME=stm32mp157d-dk1.dtb',
    'STM32MP_SDMMC=1',
  ],
  srcs = ["@bl2//:sources"],
  builddir_variable = "BUILD_BASE",
  outputs = [
    "stm32mp1/release/tf-a-stm32mp157d-dk1.stm32",
    "stm32mp1/release/tf-a-stm32mp157d-dk1.map",
    "stm32mp1/release/fdts/stm32mp157d-dk1-fw-config.dtb",
  ],
  targets = ["", "dtbs"],
  target_compatible_with = [
    "@platforms//cpu:aarch32",
  ],
)

##############################################################################
# Packaging Images
###

load("@bazel_skylib//rules:select_file.bzl", "select_file")
load("//fip:fip.bzl", "fip")
load("//genimage:genimage.bzl", "hdimage")
load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")

select_file(
  name = "tee-header_v2.bin",
  srcs = ":optee",
  subpath = "tee-header_v2.bin",
)

select_file(
  name = "tee-pager_v2.bin",
  srcs = ":optee",
  subpath = "tee-pager_v2.bin",
)

select_file(
  name = "tee-pageable_v2.bin",
  srcs = ":optee",
  subpath = "tee-pageable_v2.bin",
)

select_file(
  name = "u-boot-nodtb.bin",
  srcs = ":uboot",
  subpath = "u-boot-nodtb.bin",
)

select_file(
  name = "stm32mp157d-dk1-fw-config.dtb",
  srcs = ":trusted_firmware_a",
  subpath = "stm32mp157d-dk1-fw-config.dtb",
)

select_file(
  name = "u-boot.dtb",
  srcs = ":uboot",
  subpath = "u-boot.dtb",
)

fip(
  name = "fip.bin",
  tos_fw = ":tee-header_v2.bin",
  tos_fw_extra1 = ":tee-pager_v2.bin",
  tos_fw_extra2 = ":tee-pageable_v2.bin",
  nt_fw = ":u-boot-nodtb.bin",
  fw_config = ":stm32mp157d-dk1-fw-config.dtb",
  hw_config = ":u-boot.dtb",
)

select_file(
  name = "tf-a-stm32mp157d-dk1.stm32",
  srcs = ":trusted_firmware_a",
  subpath = "tf-a-stm32mp157d-dk1.stm32",
)

hdimage(
  name = "image",
  partition_table_type = "gpt",
  fsbl1 = {
    'image': ":tf-a-stm32mp157d-dk1.stm32",
  },
  fsbl2 = {
    'image': ":tf-a-stm32mp157d-dk1.stm32",
  },
  fip = {
    'image': ":fip.bin",
  },
  u_boot_env = {
    # Matches CONFIG_ENV_OFFSET in U-Boot
    'offset': '0x900000',
    # Matches CONFIG_ENV_SIZE in U-Boot
    'size': '0x2000',
  },
  u_boot_env_red = {
    # Matches CONFIG_ENV_OFFSET_REDUND in U-Boot
    'offset': '0x940000',
    # Matches CONFIG_ENV_SIZE in U-Boot
    'size': '0x2000',
  },
)

platform_transition_filegroup(
  name = "sdcard.img",
  srcs = [":image"],
  target_platform = "//platforms:cortex-a7-linux",
)
