cc_binary(
  name = "hello-world",
  srcs = [
    "hello-world.cpp",
  ],
  linkopts = ["-T", "$(location :STM32G474RETX_FLASH.ld)"],
  deps = [
    "@conan//stm32mp1:c_polyfill",
    ":STM32G474RETX_FLASH.ld",
  ],
  target_compatible_with = [
    "@platforms//os:none",
    "@platforms//cpu:aarch32",
  ],
)
