load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")


cc_binary(
  name = "hello-world",
  srcs = [
    "hello-world.cpp",
  ],
  linkopts = ["-T", "$(location :STM32G474RETX_FLASH.ld)"],
  deps = [
    "@conan//stm32mp1:c_polyfill",
    ":STM32G474RETX_FLASH.ld",
  ],
  target_compatible_with = [
    "@platforms//os:none",
    "@platforms//cpu:aarch32",
  ],
)

platform_transition_filegroup(
    name = "firmware",
    srcs = [":hello-world"],
    target_platform = "//platforms:cortex-m4",
    visibility = ["//visibility:public"],
)
