load(":kernel.bzl",
  "kernel_configuration", "kernel_headers", "single_app_cpio_initrd")

kernel_configuration(
  name = "kernel",
  srcs = ["@linux//:sources"],
)

kernel_headers(
  name = "headers",
  cfg = ":kernel",
)

cc_binary(
  name = "init",
  srcs = ["main.cpp"],
  target_compatible_with = [
    "@platforms//os:linux",
    "@platforms//cpu:aarch32",
  ],
)

single_app_cpio_initrd(
  name = "rootfs",
  init = ":init",
)
