load("@rules_cc//cc:defs.bzl", "cc_binary")
load(":kernel.bzl", "kernel_build", "single_app_cpio_initrd")

kernel_build(
  name = "image",
  srcs = ["@linux//:sources"],
  defconfig = "multi_v7_defconfig",
  image = "zImage",
  dtb = "stm32mp157f-dk2.dtb",
  initramfs = ':rootfs',
  # TODO: Should be possible to pull these from CcToolchain?
  arch = "arm",
  cross_compile = "armv7l-unknown-linux-gnueabihf-",
)

cc_binary(
  name = "init",
  srcs = ["main.cpp"],
  target_compatible_with = [
    "@platforms//os:linux",
    "@platforms//cpu:aarch32",
  ],
)

single_app_cpio_initrd(
  name = "rootfs",
  init = ":init",
)
