##############################################################################
# C/C++ Toolchain
##

load("//:llvm.bzl", "cc_arm_llvm_toolchain_config")

cc_arm_llvm_toolchain_config(
  name = "config_linux_aarch64_arm_none_eabi",
  clang = ":LLVM-ET-Arm-18.1.3-Linux-AArch64/bin/clang++",
)

filegroup(
  name = "compiler_files",
  srcs = glob([
    "LLVM-ET-Arm-18.1.3-Linux-AArch64/bin/**",
    "LLVM-ET-Arm-18.1.3-Linux-AArch64/lib/**",
    "LLVM-ET-Arm-18.1.3-Linux-AArch64/include/**",
  ])
)

cc_toolchain(
  name = "cc_toolchain_linux_aarch64_arm_none_eabi",
  all_files = ":compiler_files",
  ar_files = ":compiler_files",
  compiler_files = ":compiler_files",
  dwp_files = ":empty",
  linker_files = ":compiler_files",
  objcopy_files = ":empty",
  strip_files = ":empty",
  supports_param_files = 0,
  toolchain_config = ":config_linux_aarch64_arm_none_eabi",
  toolchain_identifier = "linux_aarch64_arm_none_eabi",
)

toolchain(
  name = "linux_aarch64_arm_none_eabi",
  target_compatible_with = [
    "@platforms//os:none",
    "@platforms//cpu:armv7e-m",
  ],
  toolchain = ":cc_toolchain_linux_aarch64_arm_none_eabi",
  toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
